--- a/css/style.css
+++ b/css/style.css
@@ -194,7 +194,7 @@ nav a#pull {
 	margin-top: 18em;
 }
 .top-header-info p{
-	color: rgb(2, 2, 2);
+	color: white;
 	font-family: 'nexa_boldregular';
 	font-size: 3em;
 	margin: 0;
